<resources>
    <string name="app_name">Generator faktur</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="dodaj_styl_z_pami_ci">Dodaj styl z pamięci</string>
    <string name="automatyczna_walidacja">Automatyczna walidacja</string>
    <string name="dodaj_styl_z_bazy">Dodaj styl z bazy</string>
    <string name="nazwa_stylu">Nazwa stylu</string>
    <string name="dane_faktury">Dane faktury</string>
    <string name="postep1">(Krok 1 z 5)</string>
    <string name="numer_faktury">Numer faktury:</string>
    <string name="miejscowo_wystawienia">Miejscowość wystawienia:</string>
    <string name="data_wystawienia">Data wystawienia:</string>
    <string name="ustaw_date">Ustaw datę</string>
    <string name="data_dokonania_zako_czenia_dostawy_towar_w">Data dokonania/zakończenia dostawy towarów:</string>
    <string name="sposob_zaplaty">Sposób zapłaty:</string>
    <string name="termin_zaplaty_do">Termin zapłaty do:</string>
    <string name="zapisz_i_przejdz_dalej">Zapisz i przejdz dalej</string>
    <string name="sprzedawca">Sprzedawca</string>
    <string name="postep2">(Krok 2 z 5)</string>
    <string name="nip">NIP:</string>
    <string name="pobierz_dane_z_gus">Pobierz dane z GUS</string>
    <string name="wczytaj_z_pamieci">Wczytaj z pamięci</string>
    <string name="nazwa">Nazwa:</string>
    <string name="ulica">Ulica:</string>
    <string name="numer_budynku">Numer budynku:</string>
    <string name="numer_lokalu">Numer lokalu:</string>
    <string name="miejscowosc">Miejscowość:</string>
    <string name="kod_pocztowy">Kod pocztowy:</string>
    <string name="numer_rachunku_bankowego">Numer rachunku bankowego:</string>
    <string name="bank">Bank:</string>
    <string name="numer_telefonu">Numer telefonu:</string>
    <string name="email">Email:</string>
    <string name="zapisz_dane_do_pamieci">Zapisz dane do pamięci</string>
    <string name="nabywca">Nabywca</string>
    <string name="postep3">(Krok 3 z 5)</string>
    <string name="dane_towarow_i_uslug">Dane towarów i usług</string>
    <string name="postep4">(Krok 4 z 5)</string>
    <string name="nazwa_towaru_uslugi">Nazwa towaru/usługi:</string>
    <string name="ilosc">Ilość:</string>
    <string name="jednostka_miary">Jednostka miary:</string>
    <string name="cena_brutto_za_jednostke">Cena brutto za jednostkę:</string>
    <string name="rabat_w_procentach">Rabat w procentach:</string>
    <string name="stawka_vat_w_procentach">Stawka VAT w procentach:</string>
    <string name="dodaj_kolejny_towar_uslug">Dodaj kolejny towar/usługę</string>
    <string name="zako_cz_dodawanie_towar_w_us_ug_i_przejdz_dalej">Zakończ dodawanie towarów/usług i przejdz dalej</string>
    <string name="podsumowanie">Podsumowanie</string>
    <string name="postep5">(Krok 5 z 5)</string>
    <string name="wyliczona_nale_no_og_em">Wyliczona należność ogółem:</string>
    <string name="nalezno_ogolem_slownie">Należność ogólem słownie:</string>
    <string name="wybierz_styl_dokumentu">Wybierz styl dokumentu:</string>
    <string name="zakoncz_tworzenie_i_udostepnij">Zakończ tworzenie i udostępnij</string>
    <string name="nazwa_stylu_w_bazie_danych">Nazwa stylu w bazie danych</string>
    <string name="nazwa_faktury">Nazwa faktury</string>
    <string name="stw_rz_faktur">Stwórz fakturę</string>

    <string-array name="stawka_VAT">
        <item>0</item>
        <item>5</item>
        <item>8</item>
        <item>23</item>
    </string-array>
</resources>
